tdf#136294: trigger pending spellcheck in SwCursorShell::UpdateCursor

This allows to drop the partial fix created for tdf#124603  (except for unit
test). The problem solved in commit 4c91e94e892943ef5e031d65f6f42864233cb4cd
(tdf#92036: sw: fix idle spelling loop,  2015-09-09)  is kept solved; when a
word is marked pending,  this is signalled  to the viewshell.  SwCursorShell
stores that as a flag,  which will then start an idle on cursor update,  and
finally call SwViewShell::LayoutIdle, which does the spell checking.  If the
cursor is still in the word that is pending the check, the cycle will repeat,
trying spell checks only at cursor update, not as a busy loop.

Change-Id: I5dc77baabffa723e261d553e40d40e5ace4266bc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168413
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>