sw/source/core/crsr/crsrsh.cxx
@@ -1908,6 +1908,15 @@ void SwCursorShell::UpdateCursor( sal_uInt16 eFlags, bool bIdleEnd )
         return; // if not then no update
     }
 
+    if (m_bNeedLayoutOnCursorUpdate)
+    {
+        // A previous spell check skipped a word that had a spelling error, because that word
+        // had cursor. Now schedule the idle to call SwViewShell::LayoutIdle, to repeat the
+        // spell check, in the hope that the cursor has left the word.
+        m_aLayoutIdle.Start();
+        m_bNeedLayoutOnCursorUpdate = false;
+    }
+
 #if !ENABLE_WASM_STRIP_ACCESSIBILITY
     SwNotifyAccAboutInvalidTextSelections aInvalidateTextSelections( *this );
 #endif
@@ -3291,6 +3300,7 @@ SwCursorShell::SwCursorShell( SwCursorShell& rShell, vcl::Window *pInitWin )
     , m_eEnhancedTableSel(SwTable::SEARCH_NONE)
     , m_nMarkedListLevel( 0 )
     , m_oldColFrame(nullptr)
+    , m_aLayoutIdle("SwCursorShell m_aLayoutIdle")
 {
     CurrShell aCurr( this );
     // only keep the position of the current cursor of the copy shell
@@ -3306,6 +3316,10 @@ SwCursorShell::SwCursorShell( SwCursorShell& rShell, vcl::Window *pInitWin )
     m_bSetCursorInReadOnly = true;
     m_pVisibleCursor = new SwVisibleCursor( this );
     m_bMacroExecAllowed = rShell.IsMacroExecAllowed();
+    m_bNeedLayoutOnCursorUpdate = false;
+
+    m_aLayoutIdle.SetPriority(TaskPriority::LOWEST);
+    m_aLayoutIdle.SetInvokeHandler(LINK(this, SwCursorShell, DoLayoutIdle));
 }
 
 /// default constructor
@@ -3328,6 +3342,7 @@ SwCursorShell::SwCursorShell( SwDoc& rDoc, vcl::Window *pInitWin,
     , m_eEnhancedTableSel(SwTable::SEARCH_NONE)
     , m_nMarkedListLevel( 0 )
     , m_oldColFrame(nullptr)
+    , m_aLayoutIdle("SwCursorShell m_aLayoutIdle")
 {
     CurrShell aCurr( this );
     // create initial cursor and set it to first content position
@@ -3352,10 +3367,16 @@ SwCursorShell::SwCursorShell( SwDoc& rDoc, vcl::Window *pInitWin,
 
     m_pVisibleCursor = new SwVisibleCursor( this );
     m_bMacroExecAllowed = true;
+    m_bNeedLayoutOnCursorUpdate = false;
+
+    m_aLayoutIdle.SetPriority(TaskPriority::LOWEST);
+    m_aLayoutIdle.SetInvokeHandler(LINK(this, SwCursorShell, DoLayoutIdle));
 }
 
 SwCursorShell::~SwCursorShell()
 {
+    m_aLayoutIdle.Stop();
+
     // if it is not the last view then at least the field should be updated
     if( !unique() )
         CheckTableBoxContent( m_pCurrentCursor->GetPoint() );
@@ -3383,6 +3404,8 @@ SwCursorShell::~SwCursorShell()
     // a client at the cursor shell the chance to hang itself on a TextNode
     EndListeningAll();
 }
+
+IMPL_LINK_NOARG(SwCursorShell, DoLayoutIdle, Timer*, void) { LayoutIdle(); }
 
 SwShellCursor* SwCursorShell::getShellCursor( bool bBlock )
 {
